Fix bug: images showing cropped bcs of different aspect ratio

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -396,20 +396,30 @@
 .photo-viewer__img-text-wrapper {
   max-width: 70%;
   max-height: 70%;
+  width: fit-content;
+  height: 70%;
   position: relative;
   z-index: 2;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
 }
 @media (max-width: 768px) {
   .photo-viewer__img-text-wrapper {
     max-width: 90%;
     max-height: 90%;
+    width: auto;
+    height: auto;
   }
 }
 @media (max-width: 400px) {
   .photo-viewer__img-text-wrapper {
     max-width: 90%;
     max-height: 90%;
+    width: auto;
+    height: auto;
   }
 }
 .photo-viewer__text-wrapper {
@@ -431,11 +441,7 @@
   }
 }
 .photo-viewer__img {
-  width: 100%;
-}
-.photo-viewer__img-wrapper {
-  overflow: hidden;
-  width: 100%;
+  height: 100%;
 }
 .photo-viewer__close-btn {
   position: absolute;
