--- a/src/styles/partials/_photo-viewer.scss
+++ b/src/styles/partials/_photo-viewer.scss
@@ -23,18 +23,28 @@
     &__img-text-wrapper {
         max-width: 70%;
         max-height: 70%;
+        width: fit-content;
+        height: 70%;
         position: relative;
         z-index: 2;
         overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: black;
 
         @include tablet {
             max-width: 90%;
             max-height: 90%;
+            width: auto;
+            height: auto;
         }
 
         @include mobile {
             max-width: 90%;
             max-height: 90%;
+            width: auto;
+            height: auto;
         }
     }
 
@@ -57,12 +67,7 @@
     }
 
     &__img {
-        width: 100%;
-
-        &-wrapper {
-            overflow: hidden;
-            width: 100%;
-        }
+        height: 100%;
     }
 
     &__close { 
